add media links

--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
                     <a href="index.html"><img src="img/logo_white.svg" alt=""></a>
                 </nav>
                 <nav class="media">
-                    <a href="#Facebook" class="media__link"><img src="img/media/facebook.svg" alt=""></a>
-                    <a href="#Twitter" class="media__link"><img src="img/media/twitter.svg" alt=""></a>
-                    <a href="#Instagram" class="media__link"><img src="img/media/instagram.svg" alt=""></a>
-                    <a href="#Youtube" class="media__link"><img src="img/media/youtube.svg" alt=""></a>
+                    <a href="https://www.facebook.com/" class="media__link"><img src="img/media/facebook.svg" alt=""></a>
+                    <a href="https://twitter.com/?lang=ru" class="media__link"><img src="img/media/twitter.svg" alt=""></a>
+                    <a href="https://www.instagram.com/" class="media__link"><img src="img/media/instagram.svg" alt=""></a>
+                    <a href="https://www.youtube.com/" class="media__link"><img src="img/media/youtube.svg" alt=""></a>
                 </nav>
             </div>
         </footer>
